# BLE-ALARM

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/external_libraries/: TIRTOS-Config.cmake  TIRTOS-Paths.cmake
cmake/logic_modules/: cc2650-ti-cgt.cmake  cortex-m3.cmake
cmake/toolchains/: ti-cgt-toolchain.cmake
cmake/tools/: frontier.cmake
simple_peripheral_app/: CMakeLists.txt  CMakePresets.json
simple_peripheral_app/hdr/: simple_peripheral.h  uart_task.h
simple_peripheral_app/src/: main.c  simple_peripheral.c  uart_task.c
simple_peripheral_stack/: CMakeLists.txt  CMakePresets.json  ReadMe.md
simple_peripheral_stack/src/: osal_icall_ble.c
